--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,10 @@
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
 		/>
+		<link
+			href="https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap"
+			rel="stylesheet"
+		/>
 
 		<link
 			rel="stylesheet"
