--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 		></script>
 		<link
 			rel="stylesheet"
-			href="https://fonts.googleapis.com/css?family=Lato&display=swap"
+			href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap"
 		/>
 		<link
 			href="https://fonts.googleapis.com/css?family=Montserrat:100,200&display=swap"
