explore this space page

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
 		<link rel="stylesheet" href="./styles/gallery.css" />
 		<link rel="stylesheet" href="./styles/global.css" />
 		<link rel="stylesheet" href="./styles/grid.css" />
+		<link rel="stylesheet" href="./styles/header.css" />
 		<link rel="stylesheet" href="./styles/icons.css" />
 		<link rel="stylesheet" href="./styles/nav.css" />
 		<link rel="stylesheet" href="./styles/reviews.css" />
