--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,13 @@
 			rel="stylesheet"
 		/>
 
+		<link
+			rel="stylesheet"
+			href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+			crossorigin="anonymous"
+		/>
+
 		<!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
 		<link rel="stylesheet" href="./styles/buttons.css" />
 		<link rel="stylesheet" href="./styles/cards.css" />
