update login page

--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,6 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
-		<link
-			rel="stylesheet"
-			href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-			integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-			crossorigin="anonymous"
-		/>
-
 		<script
 			src="https://kit.fontawesome.com/8a2168f8c3.js"
 			crossorigin="anonymous"
@@ -33,22 +26,10 @@
 		/>
 
 		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-		/>
-		<link
 			href="https://fonts.googleapis.com/icon?family=Material+Icons"
 			rel="stylesheet"
 		/>
 
-		<link
-			rel="stylesheet"
-			href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-			crossorigin="anonymous"
-		/>
-
-		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
 		<link
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css?family=Raleway"
@@ -64,6 +45,7 @@
 		<link rel="stylesheet" href="./styles/grid.css" />
 		<link rel="stylesheet" href="./styles/header.css" />
 		<link rel="stylesheet" href="./styles/icons.css" />
+		<link rel="stylesheet" href="./styles/login.css" />
 		<link rel="stylesheet" href="./styles/nav.css" />
 		<link rel="stylesheet" href="./styles/reviews.css" />
 		<link rel="stylesheet" href="./styles/sidebar.css" />
@@ -107,7 +89,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-		<script
+		<!-- <script
 			src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
 			integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
 			crossorigin="anonymous"
@@ -121,7 +103,7 @@
 			src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
 			integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
 			crossorigin="anonymous"
-		></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+		></script> -->
+		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
 	</body>
 </html>
