--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,7 @@
 		<link rel="stylesheet" href="./styles/reviews.css" />
 		<link rel="stylesheet" href="./styles/sidebar.css" />
 		<link rel="stylesheet" href="./styles/users.css" />
+		<link rel="stylesheet" href="./styles/rodal.css" />
 
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
