--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,14 @@
 			src="https://kit.fontawesome.com/8a2168f8c3.js"
 			crossorigin="anonymous"
 		></script>
+
+		<!-- FONTS -->
+
 		<link
 			rel="stylesheet"
-			href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap"
+			href="https://fonts.googleapis.com/css?family=Lato|Open+Sans|Montserrat:100|Roboto:300,400,500,700|Abril+Fatface&display=swap"
 		/>
-		<link
+		<!-- <link
 			href="https://fonts.googleapis.com/css?family=Montserrat:100,200&display=swap"
 			rel="stylesheet"
 		/>
@@ -23,7 +26,7 @@
 		<link
 			href="https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap"
 			rel="stylesheet"
-		/>
+		/> -->
 
 		<link
 			href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -64,17 +67,16 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
 
 		<title>Curate: Stylish Spaces for Content Creators</title>
+		<!-- BOOTSTRAP -->
+		<link
+			href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"
+			rel="stylesheet"
+		/>
+		<!-- END BOOTSTRAP -->
+
+		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 	</head>
 
 	<body>
