--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,18 @@
 			crossorigin="anonymous"
 		></script>
 
-		<!-- FONTS -->
-
 		<link
 			rel="stylesheet"
-			href="https://fonts.googleapis.com/css?family=Lato|Open+Sans|Montserrat:100|Roboto:300,400,500,700|Abril+Fatface&display=swap"
+			href="https://fonts.googleapis.com/css?family=Lato|Open+Sans|Montserrat:100|Roboto:300,400,500,700|Abril+Fatface|Raleway&display=swap"
 		/>
+
+		<!-- <link
+					href="https://fonts.googleapis.com/icon?family=Material+Icons"
+					rel="stylesheet"
+				/> -->
+
+		<!-- FONTS -->
+
 		<!-- <link
 			href="https://fonts.googleapis.com/css?family=Montserrat:100,200&display=swap"
 			rel="stylesheet"
@@ -27,16 +33,10 @@
 			href="https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap"
 			rel="stylesheet"
 		/> -->
-
-		<link
-			href="https://fonts.googleapis.com/icon?family=Material+Icons"
-			rel="stylesheet"
-		/>
-
-		<link
+		<!-- <link
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css?family=Raleway"
-		/>
+		/> -->
 
 		<!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
 		<link rel="stylesheet" href="./styles/buttons.css" />
@@ -71,12 +71,12 @@
 		<title>Curate: Stylish Spaces for Content Creators</title>
 		<!-- BOOTSTRAP -->
 		<link
-			href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"
+			href="//maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
 			rel="stylesheet"
 		/>
 		<!-- END BOOTSTRAP -->
 
-		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+		<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 	</head>
 
 	<body>
